tests/const_missing_init_local.stderr
tests/const_missing_init_local.hop:3:2: error: HOP2028: const declaration requires initializer
