tests/const_missing_init_local.hop
// Verifies const missing initialization local.
fn main() {
	const x i32
	_ = x
}
